Mon Sep 15 17:30:26 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fixed the "rotating vertical lines makes them disappear" bug.
	* Rewrote some line stuff with a faster, more general case.
	* Thanks to Alex Hudson (ID-Pro) for advice on this.

Sun Sep 10 01:12:27 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Clear obj/docs properties on doc close
	* Change props window on doc switch.

Sun Sep 10 00:07:37 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Word wrapping for text objects.
	* Fixed bug in clipping code.

Fri Sep  8 20:15:01 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Save image colormods.
	* Load image colormods.
	* Apply same.
	* Fix text object copying
	* Multiline text boxes work now.

Fri Sep  8 18:50:34 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Yay. Text objects now handle multiple lines and text
	justification. You won't see this yet, as the property box is
	still a single line GtkEntry right now. I'll do that next. It
	appears to me that the GtkText widget has one of the suckiest APIs
	I've ever seen :/

Sun Aug 27 02:19:03 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Yuck. Strongly dislikes the notebook UI. Having all the
	documents in the same window means having the window the same size
	for all of them - hardly ever what you want. Plus I want to see
	more than one at a time. So we revert to a multiple document
	window setup, and let the WM do the layout work. Much better.
	* The currently selected document currently changed on
	mouse_enter, let me know if this is too senstive, we could do on
	mouse click instead or something...
	* May have introduced some bugs as this was a big change. Let me
	know.

Sat Aug 26 20:48:36 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Block all the handlers when filling doc properties fields in,
	else all the changed handlers get called.
	* Added document resizing support. It's a hack right now, as it
	doesn't work quite right with the scrolled window. The interface