@@ -63,5 +63,6 @@ geist_list *geist_list_sort_merge(geist_list * l1, geist_list * l2,
 geist_list *geist_list_nth(geist_list * root, unsigned int num);
 unsigned char geist_list_has_more_than_one_item(geist_list * root);
 void geist_list_free_and_data(geist_list * l);
+geist_list *geist_list_dup(geist_list * list);
 
 #endif
